# HTTPServer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: CODING_GUIDELINES.md
include/: LLMReqProcessor.hpp  common_enum.hpp  common_struct.hpp  commonenum.hpp  commonstruct.hpp  connection_context.hpp  connection_info.hpp  llmserver.hpp  macros.hpp  pch.hpp  service.hpp  socket_manager.hpp  syncflag.hpp  syncqueue.hpp  tasynchndlr.hpp  treqprocessor.hpp  tthreader.hpp  tthreadpoolhandler.hpp
src/: LLMReqProcessor.cpp  connection_context.cpp  llm_reqprocessor.cpp  llmserver.cpp  main.cpp  service.cpp  socket_manager.cpp  syncflag.cpp  tasynchndlr.cpp  test_syncflag.cpp  test_threader.cpp  threader.cpp  tsynchndlr.cpp  tthreadpool.cpp
